--- a/.chezmoiscripts/run_once_install-bsdtar.tmpl
+++ b/.chezmoiscripts/run_once_install-bsdtar.tmpl
@@ -1,9 +1,11 @@
 {{- if hasKey .scripts "bsdtar" -}}
 #!/usr/bin/env bash
 
+pkg=asdf
+
 version=$(apt search libarchive-tools --version)
 
-echo "🚀 Installing bsdtar version ${version} directly from apt"
+echo "🚀 Installing $pkg version ${version} directly from apt"
 
 sudo apt install -qq -y libarchive-tools >/dev/null 2>&1
 # sudo apt autopurge -y libarchive-tools
