--- a/.chezmoiscripts/run_once_install-nvim.tmpl
+++ b/.chezmoiscripts/run_once_install-nvim.tmpl
@@ -5,6 +5,7 @@ echo "🚀 Installing nvim latest version"
 
 # Download and install nvim
 sudo rm -rf /opt/nvim
-curl -sL https://github.com/neovim/neovim/releases/latest/download/nvim-linux-x86_64.tar.gz | sudo tar -xz -C /opt
+curl -sL https://github.com/neovim/neovim/releases/latest/download/nvim-linux-x86_64.tar.gz |
+  sudo tar -xz -C /opt
 
 {{ end -}}
