--- a/.chezmoiscripts/run_once_install-perm.tmpl
+++ b/.chezmoiscripts/run_once_install-perm.tmpl
@@ -1,13 +1,17 @@
 {{- if hasKey .scripts "perm" -}}
 #!/usr/bin/env bash
 
-echo "🚀 Installing perm script to shell"
-{{ $xcp := joinPath .chezmoi.sourceDir "tools" "scripts" "perm" | quote -}}
+pkg=perm
+
+echo "🚀 Installing $pkg script to shell"
+{{ $pkg := joinPath .chezmoi.sourceDir "tools" "scripts" "$pkg" | quote -}}
 
 # copy with permission
-cp -fp {{ $xcp }} {{ .installDirs.home }}
+# cp -fp {{ $pkg }} {{ .installDirs.home }}
 
 # or use the system utils to set proper permissions/groups for this folder
-# install -m 755 ./my_program {{ .installDirs.home }}
+install -m 755 {{ $pkg }} {{ .installDirs.home }}
+
+# rm {{ joinPath .installDirs.home "$pkg" }}
 
 {{- end -}}
