--- a/.chezmoiscripts/run_once_install-podman.tmpl
+++ b/.chezmoiscripts/run_once_install-podman.tmpl
@@ -5,6 +5,7 @@ version=$(apt search podman --version)
 
 echo "🚀 Installing bsdtar version ${version} directly from apt"
 
+# getting version
 sudo apt install -qq -y podman >/dev/null 2>&1
 # sudo apt autopurge -y podman
 
