--- a/.chezmoiscripts/run_once_install-choose.tmpl
+++ b/.chezmoiscripts/run_once_install-choose.tmpl
@@ -1,12 +1,26 @@
 {{- if hasKey .scripts "choose" -}}
 #!/usr/bin/env bash
 
+pkgCreator=theryangeary
+pkg=choose
+tmp=$(mktemp -d)
+
+# openning tmp folder
+cd $tmp
+
 # getting latest version
-version=$(curl -s https://api.github.com/repos/theryangeary/choose/releases/latest | jq -r .tag_name)
+version=$(curl -s https://api.github.com/repos/$pkgCreator/$pkg/releases/latest | jq -r .tag_name)
 
-echo "🚀 Installing choose $version"
+# getting version
+version=$(curl -s https://api.github.com/repos/$pkgCreator/$pkg/releases/latest | jq -r .tag_name)
 
-sudo curl -sLo {{ joinPath .installDirs.home "choose" }}  "https://github.com/theryangeary/choose/releases/latest/download/choose-x86_64-unknown-linux-musl"
+echo "🚀 Installing $pkg $version"
+
+# downloading package
+sudo curl -sLo {{ joinPath "$tmp" "choose" }}  "https://github.com/theryangeary/choose/releases/latest/download/choose-x86_64-unknown-linux-musl"
+
+# installing it
+install -m 755 $pkg {{ .installDirs.home }}
 
 sudo chmod +x {{ joinPath .installDirs.home "choose" }}
 
