--- a/.chezmoiscripts/run_once_install-fd.tmpl
+++ b/.chezmoiscripts/run_once_install-fd.tmpl
@@ -1,21 +1,27 @@
 {{- if hasKey .scripts "fd" -}}
 #!/usr/bin/env bash
 
+pkgCreator=sharkdp
+pkg=fd
+tmp=$(mktemp -d)
+
+# openning tmp folder
+cd $tmp
+
 f="$ZEN/internal/completions/"
 
 # getting latest version of fd
-version=$(curl -s https://api.github.com/repos/sharkdp/fd/releases/latest | jq -r .tag_name)
+version=$(curl -s https://api.github.com/repos/$pkgCreator/$pkg/releases/latest | jq -r .tag_name)
 
-echo "🚀 Installing fd $version"
+echo "🚀 Installing $pkg $version"
 
-curl -sLo - https://github.com/sharkdp/fd/releases/latest/download/fd-$version-x86_64-unknown-linux-musl.tar.gz |
-  tar -xzC /tmp
+# downloading package
+curl -sLo - https://github.com/$pkgCreator/$pkg/releases/latest/download/${pkg}-$version-x86_64-unknown-linux-musl.tar.gz |
+  tar -xzC . --transform='s|.*/||'
 
-sudo mv /tmp/fd-$version-x86_64-unknown-linux-musl/fd {{ .installDirs.main }}
+# installing it
+sudo install -m 755 $pkg {{ .installDirs.main }}
 
-mv /tmp/fd-$version-x86_64-unknown-linux-musl/autocomplete/_fd $f
-
-rm -rfd /tmp/fd-$version-x86_64-unknown-linux-musl
-# sudo rm {{ joinPath .installDirs.main "fd" }}
+# rm {{ joinPath .installDirs.main "$pkg" }}
 
 {{ end -}}
