--- a/.chezmoiscripts/run_once_install-just.tmpl
+++ b/.chezmoiscripts/run_once_install-just.tmpl
@@ -1,14 +1,25 @@
 {{- if hasKey .scripts "just" -}}
 #!/usr/bin/env bash
 
+pkgCreator=casey
+pkg=just
+tmp=$(mktemp -d)
+
+# openning tmp folder
+cd $tmp
+
 # getting latest version
-version=$(curl -s https://api.github.com/repos/casey/just/releases/latest | jq -r .tag_name)
+version=$(curl -s https://api.github.com/repos/$pkgCreator/${pkg}/releases/latest | jq -r .tag_name)
 
-echo "🚀 Installing just $version"
+echo "🚀 Installing ${pkg} $version"
 
-curl -sLo - https://github.com/casey/just/releases/latest/download/just-${version#v}-x86_64-unknown-linux-musl.tar.gz |
-  tar -xzC {{ .installDirs.home }} # --transform='s|eza|ls|'
+# downloading package
+curl -sLo - https://github.com/$pkgCreator/${pkg}/releases/latest/download/${pkg}-${version#v}-x86_64-unknown-linux-musl.tar.gz |
+  tar -xzC .
 
-# echo 'alias ls="eza --color=auto --git --icons"' >> $ZSH_CUSTOM/aliases.zsh
+# installing it
+install -m 755 $pkg {{ .installDirs.home }}
+
+# rm {{ joinPath .installDirs.home "$pkg" }}
 
 {{ end -}}
