--- a/.chezmoiscripts/run_once_install-procs.tmpl
+++ b/.chezmoiscripts/run_once_install-procs.tmpl
@@ -1,14 +1,25 @@
 {{- if hasKey .scripts "procs" -}}
 #!/usr/bin/env bash
 
+pkgCreator=dalance
+pkg=procs
+tmp=$(mktemp -d)
+
+# openning tmp folder
+cd $tmp
+
 # getting latest version
-version=$(curl -s https://api.github.com/repos/dalance/procs/releases/latest | jq -r .tag_name)
+version=$(curl -s https://api.github.com/repos/$pkgCreator/$pkg/releases/latest | jq -r .tag_name)
 
-echo "🚀 Installing procs $version"
+echo "🚀 Installing $pkg $version"
 
-curl -sLo - https://github.com/dalance/procs/releases/latest/download/procs-$version-x86_64-linux.zip |
-  bsdtar -xC {{ .installDirs.home }} # --transform='s|eza|ls|'
+# downloading package
+curl -sLo - https://github.com/$pkgCreator/$pkg/releases/latest/download/${pkg}-$version-x86_64-linux.zip |
+  bsdtar -xC . # --transform='s|eza|ls|'
 
-# echo 'alias ls="eza --color=auto --git --icons"' >> $ZSH_CUSTOM/aliases.zsh
+# or use the system utils to set proper permissions/groups for this folder
+install -m 755 $pkg {{ .installDirs.home }}
+
+# rm {{ joinPath .installDirs.home "$pkg" }}
 
 {{ end -}}
