--- a/.chezmoiscripts/run_once_install-sd.tmpl
+++ b/.chezmoiscripts/run_once_install-sd.tmpl
@@ -1,14 +1,26 @@
 {{- if hasKey .scripts "sd" -}}
 #!/usr/bin/env bash
 
+pkgCreator=chmln
+pkg=sd
+tmp=$(mktemp -d)
+
+# openning tmp folder
+cd $tmp
+
 # getting latest version
-version=$(curl -s https://api.github.com/repos/chmln/sd/releases/latest | jq -r .tag_name)
+version=$(curl -s https://api.github.com/repos/$pkgCreator/${pkg}/releases/latest | jq -r .tag_name)
 
-echo "🚀 Installing sd $version"
+echo "🚀 Installing ${pkg} $version"
 
-curl -sLo - https://github.com/chmln/sd/releases/latest/download/sd-$version-x86_64-unknown-linux-musl.tar.gz |
-  tar -xzC {{ .installDirs.home }} # --transform='s|eza|ls|'
+# downloading package
+curl -sLo - https://github.com/$pkgCreator/${pkg}/releases/latest/download/${pkg}-$version-x86_64-unknown-linux-musl.tar.gz |
+  tar -xzC . --transform='s|.*/||'
 
-# echo 'alias ls="eza --color=auto --git --icons"' >> $ZSH_CUSTOM/aliases.zsh
+# installing it
+sudo install -m 755 $pkg {{ .installDirs.main }}
+
+# rm {{ joinPath .installDirs.main "$pkg" }}
+
 
 {{ end -}}
