--- a/.chezmoiscripts/run_once_install-bsdtar.tmpl
+++ b/.chezmoiscripts/run_once_install-bsdtar.tmpl
@@ -1,7 +1,7 @@
 {{- if hasKey .scripts "bsdtar" -}}
 #!/usr/bin/env bash
 
-pkg=asdf
+pkg=bsdtar
 
 version=$(apt search libarchive-tools --version)
 
