--- a/.chezmoiscripts/run_once_install-starship.tmpl
+++ b/.chezmoiscripts/run_once_install-starship.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "asdf" -}}
+{{- if hasKey .scripts "starship" -}}
 #!/usr/bin/env bash
 
 echo "🚀 Installing starship latest version"
