feat: add gitconfig aliases

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -88,8 +88,8 @@ caf = commit --amend --no-edit
 ci = commit --interactive
 cm = commit -m
 conflicts = diff --name-only --diff-filter=U # (show conflicts) example: <git conflicts>
-cp = cherry-pick
-cpn = cherry-pick -n
+cp = cherry-pick                             # cherry pick a commit, example: <git cp ..branchName> or <git cp commitHash>
+cpn = cherry-pick -n                         # cherry pick , but no commit
 #curr = rev-parse --abbrev-ref HEAD # (current branch) example: <git curr>
 current = branch --show-current       # (current branch) example: <git curr>
 delete = !gitx --run delete           # example: <git delete>
@@ -125,7 +125,8 @@ reset-hard = reset --hard HEAD                     # (clean tracked files) examp
 reset-untracked = clean -df                        # (clean untracked files) example: <git reset-clean>
 s = status
 stashes = !gitx --run stashes # (it requires to have installed the gitx plugin)
-sw = !gitx --run branches     # (it requires to have installed the gitx plugin)
+sw = switch                   # (it requires to have installed the gitx plugin)
+swx = !gitx --run branches    # (it requires to have installed the gitx plugin)
 sync = !git f && git p        # (fetch and pull) example: <git sync>
 tags = !gitx --run tags       # (it requires to have installed the gitx plugin)
 unmodule = submodule deinit -f
