feat: add gitaliases

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -78,7 +78,9 @@ a = add
 aa = add -A
 ap = add --patch
 alias = config --get-regexp alias
-authors = !gitx --run authors # (all authors that commited) example: <git authors>
+authors = shortlog --summary --email --numbered --no-merges
+authorsx = !gitx --run authors # (all authors that commited) example: <git authors>
+b = branch
 bm = branch --merged
 bed = branch --edit-description
 bsd = branch --show-description
@@ -87,22 +89,24 @@ ca = commit --amend
 caf = commit --amend --no-edit
 ci = commit --interactive
 cm = commit -m
+cleanf = clean -df                           # (clean untracked files) example: <git reset-clean>
 conflicts = diff --name-only --diff-filter=U # (show conflicts) example: <git conflicts>
 cp = cherry-pick                             # cherry pick a commit, example: <git cp ..branchName> or <git cp commitHash>
 cpn = cherry-pick -n                         # cherry pick , but no commit
-#curr = rev-parse --abbrev-ref HEAD # (current branch) example: <git curr>
-current = branch --show-current       # (current branch) example: <git curr>
-delete = !gitx --run delete           # example: <git delete>
-delete-remote = !gitx --run delete -r # (delete a given branch in remote) example: <git delete-remote branchName>
+curr = branch --show-current                 # (current branch) example: <git curr>
+del = !gitx --run delete                     # example: <git delete>
+del-remote = !gitx --run delete -r           # (delete a given branch in remote) example: <git delete-remote branchName>
 d = diff --word-diff --check --dirstat --find-copies --find-renames --histogram --color
 dt = difftool --word-diff
 dts = dt --staged
 exist-remote = ls-remote --heads origin # (check if exist in remote) example: <git exist-remote branchName>
 f = fetch --prune
+gcf = gc --agressive # optimize the repository, (also use git f) example: <git optmize> (see git gc)
 gg = grep --break --heading --line-number --color
 graph = ls --graph # example: <git graph develop feature/some-14> or just <git graph>
 graphx = graph --abbrev-commit --all
-history = !gitx --run hashes                                                                                                                           # (it requires to have installed the gitx plugin)
+hist = !gitx --run hashes                                                                                                                              # (it requires to have installed the gitx plugin)
+health = fsck                                                                                                                                          # (check the health of the repository) example: <git health>
 lazy = !LANG=en_US.UTF-8 lazygit                                                                                                                       # (execute lazygit cmd)
 list = branch -v                                                                                                                                       # (list local branches) example: <git list>
 list-remotes = branch --remotes                                                                                                                        # (list remote branches ref) example: <git list-remotes>
@@ -116,13 +120,11 @@ p = pull
 pr = pull --rebase
 patch = !git add -N . && git diff HEAD
 pushf = push --force --progress                            # (force push) example: <git pushf>
-optmize = gc --agressive                                   # clean
 recent-branches = !git branch --sort=-committerdate | head # (show recent branches) example: <git recent-branches>
-# git branch -m <branch=new-branch-name>; git push origin <branch>; git push origin --delete <current=$(git curr)>
-rename = branch -m                                 # (rename branch locally, remember to <git push origin branch> + <git delete-remote>) example: <git rename newName>
+rename = branch -m                                         # (rename branch locally, remember to <git push origin branch> + <git delete-remote>) example: <git rename newName>
+rename-remote = "!fn() { git branch -m \"$1\" \"$2\" && git push origin \"$2\" && git push origin --delete \"$1\" && git push --set-upstream origin \"$2\"; }; fn"
 reset-all = !git reset-untracked && git reset-hard # (clean all- (un)tracked files) example: <git reset-all>
 reset-hard = reset --hard HEAD                     # (clean tracked files) example: <git reset-hard>
-reset-untracked = clean -df                        # (clean untracked files) example: <git reset-clean>
 s = status
 stashes = !gitx --run stashes # (it requires to have installed the gitx plugin)
 sw = switch                   # (it requires to have installed the gitx plugin)
@@ -133,6 +135,5 @@ unmodule = submodule deinit -f
 unstage = restore --staged
 unstage-all = unstage -S .
 what = whatchanged
-who = shortlog --summary --email --numbered --no-merges
 wip = !git add -A && git commit -m 'WIP' # Work In Progress commit
 worktrees = !gitx --run worktrees        # (it requires to have installed the gitx plugin)
